--- a/Pisstortion/source/CMakeLists.txt
+++ b/Pisstortion/source/CMakeLists.txt
@@ -30,21 +30,42 @@ option(JUCE_ENABLE_MODULE_SOURCE_GROUPS "Enable module source groups" ON)
 option(JUCE_COPY_PLUGIN_AFTER_BUILD "Copy plugin after build" ON)
 
 
-if (APPLE)
+if(APPLE)
 	set (CMAKE_OSX_DEPLOYMENT_TARGET "10.9" CACHE INTERNAL "")
 	set (CMAKE_OSX_ARCHITECTURES x86_64 arm64)
 endif()
 
 if (BANNERTYPE GREATER 0)
 	add_compile_definitions(BANNER)
-	set(vstdir "../../../Setup/build/free")
-	set(vstthreedir "../../../Setup/build/free")
 	if (BANNERTYPE GREATER 1)
 		add_compile_definitions(BETA)
 	endif()
+
+	if(APPLE)
+		set(vstdir "../../../Setup/build_mac/free")
+		set(vstthreedir "../../../Setup/build_mac/free")
+	else()
+		if(UNIX)
+			set(vstdir "../../../Setup/build_linux/free")
+			set(vstthreedir "../../../Setup/build_linux/free")
+		else()
+			set(vstdir "../../../Setup/build_windows/free")
+			set(vstthreedir "../../../Setup/build_windows/free")
+		endif()
+	endif()
 else()
-	set(vstdir "../../../Setup/build/paid")
-	set(vstthreedir "../../../Setup/build/paid")
+	if(APPLE)
+		set(vstdir "../../../Setup/build_mac/paid")
+		set(vstthreedir "../../../Setup/build_mac/paid")
+	else()
+		if(UNIX)
+			set(vstdir "../../../Setup/build_linux/paid")
+			set(vstthreedir "../../../Setup/build_linux/paid")
+		else()
+			set(vstdir "../../../Setup/build_windows/paid")
+			set(vstthreedir "../../../Setup/build_windows/paid")
+		endif()
+	endif()
 endif()
 
 juce_add_plugin("${PROJECT_NAME}"
