--- a/.github/workflows/Pisstortion_build.yml
+++ b/.github/workflows/Pisstortion_build.yml
@@ -50,6 +50,13 @@ jobs:
         sudo apt-get update
         sudo apt-get install g++ libasound2-dev libjack-jackd2-dev ladspa-sdk libcurl4-openssl-dev libfreetype6-dev libx11-dev libxcomposite-dev libxcursor-dev libxcursor-dev libxext-dev libxinerama-dev libxrandr-dev libxrender-dev libwebkit2gtk-4.0-dev libglu1-mesa-dev mesa-common-dev
 
+    - name: cache stuff
+      id: cache_stuff
+      uses: actions/cache@v3
+      with:
+        path: "${{env.PLUG}}/source/${{matrix.folder}}"
+        key: "${{env.NOSPACE}}_${{matrix.folder}}"
+
     - if: startsWith(matrix.os, 'windows')
       name: (windows) configure
       id: configure_windows
@@ -86,7 +93,7 @@ jobs:
       run: |
         mv "${{env.PLUG}}/source/${{matrix.folder}}/${{env.NOSPACE}}_artefacts/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/paid/${{env.PLUG}}.clap"
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       with:
         name: ${{env.PLUG}} ${{ matrix.name }}
         path: Setup/${{matrix.folder}}/paid
@@ -127,7 +134,7 @@ jobs:
       run: |
         mv "${{env.PLUG}}/source/${{matrix.folder}}/${{env.NOSPACE}}_artefacts/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.clap"
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       with:
         name: ${{env.PLUG}} Free ${{ matrix.name }}
         path: Setup/${{matrix.folder}}/free
@@ -141,13 +148,13 @@ jobs:
         iscc "${{env.PLUG}} Free.iss"
 
     - if: startsWith(matrix.os, 'windows')
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: ${{env.PLUG}} Installer
         path: "Setup/Output/${{env.PLUG}} Installer.exe"
 
     - if: startsWith(matrix.os, 'windows')
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: ${{env.PLUG}} Free Installer
         path: "Setup/Output/${{env.PLUG}} Free Installer.exe"
