--- a/RedVJ/source/CMakeLists.txt
+++ b/RedVJ/source/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 cmake_minimum_required(VERSION 3.21)
 project(RedVJ VERSION 1.0.0)
 
+set(CMAKE_CXX_STANDARD 17)
 include(FetchContent)
 Set(FETCHCONTENT_QUIET FALSE)
 FetchContent_Declare(
@@ -14,6 +15,12 @@ FetchContent_Declare(
 	GIT_PROGRESS TRUE
 )
 FetchContent_MakeAvailable(JUCE)
+FetchContent_Declare(
+	clap-juce-extensions
+	GIT_REPOSITORY https://github.com/free-audio/clap-juce-extensions.git
+	GIT_TAG main
+)
+FetchContent_MakeAvailable(clap-juce-extensions)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 set_property(GLOBAL PROPERTY USE_FOLDERS YES)
@@ -22,8 +29,43 @@ option(JUCE_BUILD_EXAMPLES "Build examples" OFF)
 option(JUCE_ENABLE_MODULE_SOURCE_GROUPS "Enable module source groups" ON)
 option(JUCE_COPY_PLUGIN_AFTER_BUILD "Copy plugin after build" ON)
 
-set(vstdir "../../../Setup/build/free")
-set(vstthreedir "../../../Setup/build/free")
+if(APPLE)
+	set (CMAKE_OSX_DEPLOYMENT_TARGET "10.9" CACHE INTERNAL "")
+	set (CMAKE_OSX_ARCHITECTURES x86_64 arm64)
+endif()
+
+if (BANNERTYPE GREATER 0)
+	add_compile_definitions(BANNER)
+	if (BANNERTYPE GREATER 1)
+		add_compile_definitions(BETA)
+	endif()
+
+	if(APPLE)
+		set(vstdir "../../../Setup/build_mac/free")
+		set(vstthreedir "../../../Setup/build_mac/free")
+	else()
+		if(UNIX)
+			set(vstdir "../../../Setup/build_linux/free")
+			set(vstthreedir "../../../Setup/build_linux/free")
+		else()
+			set(vstdir "../../../Setup/build_windows/free")
+			set(vstthreedir "../../../Setup/build_windows/free")
+		endif()
+	endif()
+else()
+	if(APPLE)
+		set(vstdir "../../../Setup/build_mac/paid")
+		set(vstthreedir "../../../Setup/build_mac/paid")
+	else()
+		if(UNIX)
+			set(vstdir "../../../Setup/build_linux/paid")
+			set(vstthreedir "../../../Setup/build_linux/paid")
+		else()
+			set(vstdir "../../../Setup/build_windows/paid")
+			set(vstthreedir "../../../Setup/build_windows/paid")
+		endif()
+	endif()
+endif()
 
 juce_add_plugin("${PROJECT_NAME}"
 	COMPANY_NAME "unplugred"
@@ -43,6 +85,13 @@ juce_add_plugin("${PROJECT_NAME}"
 	COPY_PLUGIN_AFTER_BUILD TRUE
 	VST_COPY_DIR "${vstdir}"
 	VST3_COPY_DIR "${vstthreedir}")
+
+target_compile_features("${PROJECT_NAME}" PRIVATE cxx_std_17)
+
+clap_juce_extensions_plugin(TARGET "${PROJECT_NAME}"
+	CLAP_ID "com.unplugred.${PROJECT_NAME}"
+	CLAP_FEATURES analyzer utility mono stereo surround ambisonic
+	CLAP_USE_JUCE_PARAMETER_RANGES ALL)
 
 target_sources("${PROJECT_NAME}" PRIVATE
 	Source/lua-5.4.3/lapi.c
