--- a/.github/workflows/Pisstortion_build.yml
+++ b/.github/workflows/Pisstortion_build.yml
@@ -92,11 +92,17 @@ jobs:
         mv "Setup/${{env.PLUG}}.vst3" "Setup/${{matrix.folder}}/paid/${{env.PLUG}}.vst3"
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Release/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/paid/${{env.PLUG}}.clap"
 
-    - if: ${{ !startsWith(matrix.os, 'windows') }}
-      name: (unix) package
-      id: package
+    - if: startsWith(matrix.os, 'linux')
+      name: (linux) package
+      id: package_linux
       run: |
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/paid/${{env.PLUG}}.clap"
+
+    - if: startsWith(matrix.os, 'macos')
+      name: (mac) package
+      id: package_mac
+      run: |
+        mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Release/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/paid/${{env.PLUG}}.clap"
 
     - if: startsWith(matrix.os, 'macos')
       name: (mac) code signing
@@ -153,11 +159,17 @@ jobs:
         mv "Setup/${{env.PLUG}}.vst3" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.vst3"
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Release/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.clap"
 
-    - if: ${{ !startsWith(matrix.os, 'windows') }}
-      name: (unix) package free
-      id: package_free
+    - if: startsWith(matrix.os, 'linux')
+      name: (linux) package free
+      id: package_linux_free
       run: |
         mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.clap"
+
+    - if: startsWith(matrix.os, 'macos')
+      name: (mac) package free
+      id: package_mac_free
+      run: |
+        mv "${{matrix.folder}}/Plugins/${{env.PLUG}}/${{env.NOSPACE}}_artefacts/Release/CLAP/${{env.PLUG}}.clap" "Setup/${{matrix.folder}}/free/${{env.PLUG}}.clap"
 
     - if: startsWith(matrix.os, 'macos')
       name: (mac) code signing free
