--- a/.github/workflows/Pisstortion_build.yml
+++ b/.github/workflows/Pisstortion_build.yml
@@ -118,14 +118,14 @@ jobs:
         rm -r "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
         xcrun notarytool submit "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_vst3.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         xcrun notarytool submit "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_clap.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
-        unzip "Setup/${{ matrix.folder }}/paid/${{ env.plug }}_vst3.zip"
-        unzip "Setup/${{ matrix.folder }}/paid/${{ env.plug }}_clap.zip"
-        rm "Setup/${{ matrix.folder }}/paid/${{ env.plug }}_vst3.zip"
-        rm "Setup/${{ matrix.folder }}/paid/${{ env.plug }}_clap.zip"
-        xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.plug }}.vst3"
-        xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.plug }}.clap"
-        spctl -vvv --assess --type exec "Setup/${{ matrix.folder }}/paid/${{ env.plug }}.vst3"
-        spctl -vvv --assess --type exec "Setup/${{ matrix.folder }}/paid/${{ env.plug }}.clap"
+        unzip "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_vst3.zip"
+        unzip "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_clap.zip"
+        rm "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_vst3.zip"
+        rm "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_clap.zip"
+        xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.vst3"
+        xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
+        spctl -vvv --assess --type exec "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.vst3"
+        spctl -vvv --assess --type exec "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
 
     - uses: actions/upload-artifact@v3
       with:
